--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head class="scroll-smooth">
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/public/assets/images/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vatsalya Singhi</title>
-  </head>
-  <body>
+
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
+
+</head>
+
+<body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-  </body>
+</body>
+
 </html>
