--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head class="scroll-smooth">
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/assets/images/icon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/public/assets/images/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vatsalya Singhi</title>
 
@@ -12,12 +12,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
 
+    <!-- <link href="https://cdn.jsdelivr.net/npm/flowbite@2.4.1/dist/flowbite.min.css"  rel="stylesheet" /> -->
+
 </head>
 
-<body>
+<body id="body">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script src="./node_modules/flowbite/dist/flowbite.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/flowbite@2.4.1/dist/flowbite.min.js"></script> -->
 </body>
 
 </html>
