--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head class="scroll-smooth">
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/assets/images/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/assets/images/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vatsalya Singhi</title>
 
